welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but 'return' found.
	if ((day==0 || day==6) && vacation==true return "off";
                                                 ^